Add second part of first task
Add second part of first task

--- a/UnmanagedCode.PowerManagement/UnmanagedCode.PowerManagement.csproj
+++ b/UnmanagedCode.PowerManagement/UnmanagedCode.PowerManagement.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Tests\" />
+    <Compile Remove="Tests\**" />
+    <EmbeddedResource Remove="Tests\**" />
+    <None Remove="Tests\**" />
   </ItemGroup>
 
 </Project>
